# h2ai-control-plane

./: .gitignore  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  typeshare.toml
crates/h2ai-adapters/: Cargo.toml
crates/h2ai-adapters/src/: a2a.rs  anthropic.rs  chain.rs  cloud.rs  factory.rs  lib.rs  mock.rs  ollama.rs  openai.rs
crates/h2ai-adapters/tests/: a2a_integration_test.rs  a2a_test.rs  anthropic_test.rs  chain_test.rs  cloud_test.rs  factory_test.rs  integration_test.rs  mock_test.rs  ollama_test.rs  openai_test.rs  profile_factory_test.rs
crates/h2ai-agent/: Cargo.toml
crates/h2ai-agent/src/: config_validation.rs  dispatch.rs  heartbeat.rs  lib.rs  main.rs  tao_agent.rs  tools.rs
crates/h2ai-agent/tests/: config_validation_test.rs  dispatch_test.rs  e2e_tool_loop_test.rs  heartbeat_test.rs  tao_agent_test.rs
crates/h2ai-api/: Cargo.toml
crates/h2ai-api/src/: approval_reaper.rs  bootstrap.rs  constraint_source.rs  debug_record.rs  error.rs  lib.rs  main.rs  metrics.rs  opro.rs  oracle.rs  oracle_worker.rs  recovery.rs  rho_ema.rs  shadow_auditor.rs  state.rs  task_pipeline.rs  tenant_registry.rs
crates/h2ai-api/tests/: admin_test.rs  approval_gate_test.rs  bootstrap_test.rs  calibrate_test.rs  constraint_resolver_test.rs  constraint_source_test.rs  debug_record_test.rs  e2e_test.rs  error_test.rs  health_test.rs  metrics_test.rs  opro_test.rs  oracle_accumulator_test.rs  oracle_client_test.rs  oracle_fuse_test.rs  oracle_test.rs  oracle_worker_test.rs  recover_route_test.rs  recovery_test.rs  rho_ema_test.rs  route_unit_test.rs  shadow_auditor_test.rs  signal_route_test.rs  state_test.rs  tasks_route_test.rs  tasks_test.rs  tenant_registry_test.rs
crates/h2ai-autonomic/: Cargo.toml
crates/h2ai-autonomic/src/: audit_channel.rs  calibration.rs  checker.rs  coherence_probe.rs  complexity_probe.rs  drift.rs  epistemic.rs  knowledge_gap.rs  lib.rs  merger.rs  meta_observer.rs  planner.rs  repair.rs  retry.rs  retry_accumulator.rs  spec_repair.rs
crates/h2ai-autonomic/tests/: audit_channel_test.rs  bivariate_cg_test.rs  calibration_test.rs  checker_test.rs  coherence_probe_test.rs  complexity_probe_test.rs  contradiction_render_test.rs  dppm_repair_test.rs  drift_test.rs  epistemic_unit_test.rs  gap_quality_test.rs  graft_context_test.rs  knowledge_gap_test.rs  llm_integration_test.rs  merger_osp_test.rs  merger_test.rs  meta_observer_test.rs  orthogonal_selection_test.rs  partial_pass_repair_test.rs  planner_test.rs  repair_b1_checklist_test.rs  repair_b2_partial_pass_test.rs  repair_i1_injection_test.rs  repair_test.rs  retry_accumulator_test.rs  retry_test.rs  spec_repair_max_tokens_test.rs  spec_repair_test.rs  synthesis_context_test.rs  truncation_test.rs
crates/h2ai-config/: Cargo.toml  reference.toml
crates/h2ai-config/src/: lib.rs  prompts.rs
crates/h2ai-config/tests/: config_test.rs  max_tokens_propagation_test.rs  profile_test.rs  prompts_test.rs
crates/h2ai-constraints/: Cargo.toml
crates/h2ai-constraints/src/: ambiguity.rs  clustering.rs  complexity.rs  conflict.rs  eval.rs  index.rs  lib.rs  loader.rs  nats_versioned.rs  resolver.rs  retrieval.rs  source.rs  spec.rs  store.rs  types.rs  versioned.rs  wiki.rs  yaml.rs
crates/h2ai-constraints/tests/: ambiguity_test.rs  clustering_test.rs  complexity_test.rs  conflict_test.rs  corpus_integration_test.rs  eval_test.rs  loader_test.rs  nats_versioned_test.rs  resolver_test.rs  retrieval_test.rs  source_test.rs  spec_test.rs  types_test.rs  versioned_test.rs  wiki_test.rs  yaml_dir_source_test.rs  yaml_unit_test.rs
crates/h2ai-context/: Cargo.toml
crates/h2ai-context/src/: adr.rs  compaction.rs  compiler.rs  context_chunk.rs  embedding.rs  fusion.rs  jaccard.rs  lib.rs  similarity.rs
crates/h2ai-context/tests/: adr_test.rs  compaction_test.rs  compiler_constraint_doc_test.rs  compiler_test.rs  context_chunk_test.rs  embedding_test.rs  fusion_test.rs  jaccard_test.rs
crates/h2ai-eval/: Cargo.toml
crates/h2ai-eval/src/: lib.rs  main.rs
crates/h2ai-eval/tests/: parse_result_test.rs
crates/h2ai-knowledge/: Cargo.toml
crates/h2ai-knowledge/src/: bm25plus.rs  factory.rs  graph.rs  lib.rs  provider.rs  skill_provider.rs  source.rs  types.rs
crates/h2ai-knowledge/tests/: bm25plus_test.rs  graph_test.rs  provider_test.rs  skill_provider_test.rs  source_test.rs
crates/h2ai-memory/: Cargo.toml
crates/h2ai-memory/src/: error.rs  in_memory.rs  lib.rs  nats_kv.rs  provider.rs
crates/h2ai-memory/tests/: in_memory_test.rs  nats_kv_test.rs  provider_test.rs
crates/h2ai-nats/: Cargo.toml
crates/h2ai-nats/src/: lib.rs  nkey.rs  subjects.rs
crates/h2ai-nats/tests/: nkey_test.rs  subjects_test.rs
crates/h2ai-orchestrator/: Cargo.toml
crates/h2ai-orchestrator/src/: attribution.rs  awareness_probe.rs  bandit.rs  ceiling_detector.rs  coherence.rs  complexity.rs  compound.rs  context_assembler.rs  correlated_hallucination.rs  decomposition.rs  diagnostics.rs  diversity.rs  domain_coverage.rs  engine.rs  epistemic_feedback.rs  error.rs  error_class.rs  gap_registry.rs  grounding_chain.rs  induction_store.rs  judge_panel.rs  leader.rs  lib.rs  llm_parse.rs  mape_k.rs  nats_dispatch_adapter.rs  oracle.rs  oracle_gate.rs  output_renderer.rs  output_schema.rs  payload_store.rs  pipeline.rs  prompts.rs  provenance.rs  repetition.rs  scheduler.rs  self_optimizer.rs  session_journal.rs  signal_dispatch.rs  skill_extractor.rs  (+9 more)
crates/h2ai-orchestrator/tests/: algorithmic_induction_test.rs  archetype_parse_test.rs  attribution_test.rs  awareness_probe_test.rs  bandit_test.rs  ceiling_detector_test.rs  checkpoint_test.rs  coherence_checker_test.rs  coherence_test.rs  complexity_test.rs  compound_test.rs  context_assembler_ext_test.rs  context_assembler_tension_test.rs  context_assembler_test.rs  correlated_hallucination_test.rs  (+81 more)
crates/h2ai-planner/: Cargo.toml
crates/h2ai-provisioner/: Cargo.toml
crates/h2ai-state/: Cargo.toml
crates/h2ai-telemetry/: Cargo.toml
crates/h2ai-test-utils/: Cargo.toml
crates/h2ai-tools/: Cargo.toml
crates/h2ai-types/: Cargo.toml
(+434 files in other folders)
