[workspace]
members = [
    "crates/h2ai-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yuriy Polyulya"]
license = "BSD-3-Clause"

[workspace.dependencies]
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
async-trait = "0.1"
thiserror   = "1"
tokio       = { version = "1", features = ["full"] }
