[workspace]
members = [
    "crates/h2ai-types",
    "crates/h2ai-state",
    "crates/h2ai-context",
    "crates/h2ai-config",
    "crates/h2ai-adapters",
    "crates/h2ai-autonomic",
    "crates/h2ai-provisioner",
    "crates/h2ai-memory",
    "crates/h2ai-telemetry",
    "crates/h2ai-nats",
    "crates/h2ai-planner",
    "crates/h2ai-orchestrator",
    "crates/h2ai-api",
    "crates/h2ai-tools",
    "crates/h2ai-agent",
    "crates/h2ai-constraints",
    "crates/h2ai-knowledge",
    "crates/h2ai-test-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yuriy Polyulya"]
license = "BSD-3-Clause"

[workspace.dependencies]
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
serde_yaml      = "0.9"
async-trait     = "0.1"
thiserror       = "1"
tokio           = { version = "1", features = ["full"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures         = "0.3"
walkdir         = "2"
reqwest         = { version = "0.12", features = ["json"] }
wasmtime        = { version = "25" }
wiremock        = "0.6"
typeshare       = "1"
async-nats      = "0.38"
bytes           = "1"
dashmap         = "6"
nkeys           = "0.4"
regex           = "1"
axum            = { version = "0.7", features = ["macros"] }
tokio-stream    = "0.1"
tower           = "0.4"
tower-http      = { version = "0.5", features = ["trace", "cors"] }
metrics         = "0.23"
metrics-exporter-prometheus = "0.15"
async-stream    = "0.3"
nalgebra        = { version = "0.33", default-features = false, features = ["std"] }
rand            = "0.8"
rand_distr      = "0.4"
sha2            = "0.10"
hex             = "0.4"
zstd            = "0.13"
hostname        = "0.4"
h2ai-knowledge  = { path = "crates/h2ai-knowledge" }
jsonschema      = { version = "0.28", default-features = false }
mockall         = "0.13"

# ort-sys 2.0.0-rc.12 introduced breaking API changes (size_t removal, fn-pointer types)
# and a mandatory TLS feature gate, both incompatible with ort 2.0.0-rc.4 used by fastembed.
# Pin to rc.4 which is API-compatible and has no TLS requirement.
[patch.crates-io]
ort-sys = { git = "https://github.com/pykeio/ort", tag = "v2.0.0-rc.4", package = "ort-sys" }
