[package]
name        = "h2ai-agent"
description = "Edge agent binary for the H2AI Control Plane"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[[bin]]
name = "h2ai-agent"
path = "src/main.rs"

[lib]
name = "h2ai_agent"
path = "src/lib.rs"

[dependencies]
h2ai-types    = { path = "../h2ai-types" }
h2ai-adapters = { path = "../h2ai-adapters" }
h2ai-state    = { path = "../h2ai-state" }
h2ai-nats     = { path = "../h2ai-nats" }
async-nats    = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono        = { workspace = true }
futures       = { workspace = true }
anyhow        = "1"
uuid          = { workspace = true }

[dev-dependencies]
tokio         = { workspace = true }
h2ai-adapters = { path = "../h2ai-adapters" }
h2ai-state    = { path = "../h2ai-state" }
h2ai-nats     = { path = "../h2ai-nats" }
async-nats    = { workspace = true }
