[package]
name        = "h2ai-autonomic"
description = "MAPE-K control loop — physics checker, topology planner, merge engine, retry policy"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[dependencies]
h2ai-types       = { path = "../h2ai-types" }
h2ai-config      = { path = "../h2ai-config" }
h2ai-state       = { path = "../h2ai-state" }
h2ai-adapters    = { path = "../h2ai-adapters" }
h2ai-context     = { path = "../h2ai-context" }
h2ai-constraints = { path = "../h2ai-constraints" }
chrono        = { workspace = true }
tracing       = { workspace = true }
futures       = { workspace = true }
nalgebra      = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
serde_json    = { workspace = true }

[dev-dependencies]
h2ai-test-utils  = { path = "../h2ai-test-utils" }
h2ai-adapters = { path = "../h2ai-adapters" }
h2ai-config   = { path = "../h2ai-config" }
async-trait   = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
