[package]
name        = "h2ai-config"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true

[dependencies]
h2ai-types     = { path = "../h2ai-types" }
h2ai-knowledge = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
config     = { version = "0.15", default-features = false, features = ["toml"] }
tracing    = { workspace = true }

[dev-dependencies]
tempfile   = "3"
serde_json = { workspace = true }
config     = { version = "0.15", default-features = false, features = ["toml"] }
h2ai-types = { path = "../h2ai-types" }
