[package]
name = "h2ai-constraints"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
regex       = { workspace = true }
jsonschema  = { version = "0.26", default-features = false }
thiserror   = { workspace = true }
tracing     = { workspace = true }

tokio       = { workspace = true, features = ["fs", "rt", "macros"] }

[dev-dependencies]
tempfile    = "3"
