[package]
name        = "h2ai-eval"
description = "H2AI oracle evaluation runner — runs test suites against winning outputs via NATS"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[[bin]]
name = "h2ai-eval"
path = "src/main.rs"

[lib]
name = "h2ai_eval"
path = "src/lib.rs"

[dependencies]
h2ai-types  = { path = "../h2ai-types" }
h2ai-tools  = { path = "../h2ai-tools" }
async-nats  = { workspace = true }
tokio       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures     = { workspace = true }
tempfile    = "3"
