[package]
name        = "h2ai-nats"
description = "NATS JetStream topology and NKey provisioning for the H2AI Control Plane"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[dependencies]
h2ai-types  = { path = "../h2ai-types" }
async-nats  = { workspace = true }
thiserror   = { workspace = true }
nkeys       = { workspace = true }
serde       = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
