[package]
name        = "h2ai-orchestrator"
description = "Core task orchestration pipeline for the H2AI Control Plane"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[dependencies]
h2ai-types       = { path = "../h2ai-types" }
h2ai-state       = { path = "../h2ai-state" }
h2ai-autonomic   = { path = "../h2ai-autonomic" }
h2ai-context     = { path = "../h2ai-context" }
h2ai-adapters    = { path = "../h2ai-adapters" }
h2ai-config      = { path = "../h2ai-config" }
h2ai-memory      = { path = "../h2ai-memory" }
h2ai-provisioner = { path = "../h2ai-provisioner" }
h2ai-telemetry   = { path = "../h2ai-telemetry" }
h2ai-nats        = { path = "../h2ai-nats" }
async-trait     = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
async-nats      = { workspace = true }
futures         = { workspace = true }
dashmap         = { workspace = true }
chrono          = { workspace = true }
regex           = { workspace = true }
jsonschema      = { version = "0.26", default-features = false }

[dev-dependencies]
h2ai-adapters  = { path = "../h2ai-adapters" }
h2ai-config    = { path = "../h2ai-config" }
h2ai-autonomic = { path = "../h2ai-autonomic" }
h2ai-context   = { path = "../h2ai-context" }
tokio          = { workspace = true }
chrono         = { workspace = true }
