[package]
name        = "h2ai-provisioner"
description = "Agent infrastructure abstraction for the H2AI Control Plane"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[features]
kubernetes = ["kube", "k8s-openapi"]
# Expose new_test_only() and inject_registration() for use in downstream
# crate dev-dependencies: h2ai-provisioner = { ..., features = ["testing"] }
testing = []

[dependencies]
h2ai-types  = { path = "../h2ai-types" }
h2ai-nats   = { path = "../h2ai-nats" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
async-nats  = { workspace = true }
dashmap     = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }
bytes       = { workspace = true }
kube        = { version = "0.97", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.23", features = ["v1_30"], optional = true }

[dev-dependencies]
h2ai-provisioner = { path = ".", features = ["testing"] }
tokio  = { workspace = true }
uuid   = { workspace = true }
chrono = { workspace = true }

[[test]]
name = "scheduling_test"
required-features = ["testing"]

[[test]]
name = "policy_test"
required-features = ["testing"]
