[package]
name        = "h2ai-state"
description = "CRDT semilattice + NATS JetStream event log for the H2AI Control Plane"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[dependencies]
h2ai-types       = { path = "../h2ai-types" }
h2ai-nats        = { path = "../h2ai-nats" }
h2ai-context     = { path = "../h2ai-context" }
h2ai-constraints = { path = "../h2ai-constraints" }
h2ai-config      = { path = "../h2ai-config" }
async-nats  = "0.38"
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
zstd        = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
h2ai-config        = { path = "../h2ai-config" }
h2ai-orchestrator  = { path = "../h2ai-orchestrator" }
h2ai-control-plane = { path = "../h2ai-api" }
h2ai-constraints   = { path = "../h2ai-constraints" }
