[package]
name        = "h2ai-test-utils"
description = "Shared test mocks and utilities for H2AI crates (dev-dependency only)"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[dependencies]
h2ai-types        = { path = "../h2ai-types" }
h2ai-tools        = { path = "../h2ai-tools" }
h2ai-adapters     = { path = "../h2ai-adapters" }
h2ai-state        = { path = "../h2ai-state" }
h2ai-orchestrator = { path = "../h2ai-orchestrator" }
async-trait       = { workspace = true }
chrono            = { workspace = true }
futures           = { workspace = true }
mockall           = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
