[package]
name = "h2ai-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
h2ai-types = { path = "../h2ai-types" }
tokio = { workspace = true, features = ["process"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
