[package]
name        = "h2ai-types"
description = "Pure types boundary for the H2AI Control Plane — zero external I/O deps"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[dependencies]
uuid        = { workspace = true }
chrono      = { workspace = true }
json-patch  = "2"
serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
typeshare   = { workspace = true }
nalgebra    = { workspace = true }

[dev-dependencies]
mockall     = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
